Add new option and video embed for Q6

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ button:hover{ background:#1d4ed8; }
         <option value="2">Q3: Electrostatics hardest multiple choice</option>
         <option value="3">Q4: Organic Chemistry reaction trap</option>
         <option value="4">Q5: Mechanics extreme case problem</option>
+        <option value="0">Q6: Pacticles</option>
     </select>
 
     <p id="brahmaQuestionText"></p>
@@ -103,6 +104,10 @@ const BRAHMASTRA = [
     {
         q:"Mechanics extreme case problem",
         video:"https://www.youtube.com/embed/YOUR_VIDEO_ID_5"
+    }
+    {
+        q:"Mechanics extreme case problem",
+        video:"<iframe width="315" height="576" src="https://www.youtube.com/embed/xOdnHYbPdJM" title="Bro balance a book on his finger 😱 #physicswallah #shorts #pwians" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
     }
 ];
 
