Update video link format in index.html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ const BRAHMASTRA = [
     }
     {
         q:"Mechanics extreme case problem",
-        video:"<iframe width="315" height="576" src="https://www.youtube.com/embed/xOdnHYbPdJM" title="Bro balance a book on his finger 😱 #physicswallah #shorts #pwians" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
+        video:"https://www.youtube.com/embed/xOdnHYbPdJM"
     }
 ];
 
