Update question and video for Q5 in index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ button:hover{ background:#1d4ed8; }
         <option value="1">Q2: Thermodynamics tricky efficiency problem</option>
         <option value="2">Q3: Electrostatics hardest multiple choice</option>
         <option value="3">Q4: Organic Chemistry reaction trap</option>
-        <option value="4">Q5: Mechanics extreme case problem</option>
+        <option value="4">Q5: Practical</option>
     </select>
 
     <p id="brahmaQuestionText"></p>
@@ -101,8 +101,8 @@ const BRAHMASTRA = [
         video:"https://www.youtube.com/embed/YOUR_VIDEO_ID_4"
     },
     {
-        q:"Mechanics extreme case problem",
-        video:"https://www.youtube.com/embed/YOUR_VIDEO_ID_5"
+        q:"Practical",
+        video:"https://www.youtube.com/embed/xOdnHYbPDJM"
     }
 ];
 
